Fixed checkbox inline alignment.

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -139,6 +139,7 @@ engca-form-success > p {
   font-style: normal;
   font-weight: 400;
   line-height: 39px; /* 216.667% */
+  display: inline-flex; align-items: center;
 }
 
 .form-radio-label {
